# rdkit

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING  CTestConfig.cmake  CTestCustom.ctest.in  DartConfiguration.tcl  INSTALL  INSTALL.txt  ISSUE_TEMPLATE.md  Notebook_3.ipynb  PULL_REQUEST_TEMPLATE.md  README  README.emscripten  README.md  README_patching.md  README_timing.md  ReleaseNotes.md  ReleaseNotes.txt  WIN_BUILD.bat  WL_enhanced_BertzCT.py  appveyor.yml  azure-pipelines.yml  brian_setup.sh  build.sh  conanfile.py  enhanced_stereo_in_reactions_demo.py  fix_brian_setup.txt  fix_template_bonds.py  github.MD  license.txt  masterjson.py  minimize_coords.py  minimize_templates.py  (+25 more)
Code/: BoostUtils.cmake  CMakeLists.txt  CompleteJamroot.py  Jamroot  Jamroot.in  Makefile  RDCode.dsw  RDCode.min.dsw  RDCode.sln  RDKitUtils.cmake  Tests.dsp  ZZZAllRegrs.vcproj  ZZZAllWrappers.vcproj  cmake.org  doxygen.config  doxygen.core.config  notes.CXX.txt  notes.txt  rdrules.make  rdvars.make  stdafx.h  test_list.py
Code/Bench/: CMakeLists.txt  README.md  bench_common.cpp  bench_common.hpp  descriptors.cpp  fingerprint.cpp  inchi.cpp  many.cpp  meta.cpp  mol.cpp  molops.cpp  pickle.cpp  reaction_enumerate.cpp  similarity_matrix.cpp  smiles.cpp  stereo.cpp  substruct_match.cpp
Code/Build.VC71/: RDCode.sln
Code/Build.VC80/: RDCode.sln
Code/CIPLabeler/: CIPLabeler.cpp  CIPMol.h  Digraph.h  Edge.h  Node.cpp  Node.h  Priority.hpp  Sort.cpp  Sort.h  catch_tests.cpp
Code/Catalogs/: CMakeLists.txt  Catalog.cpp  Catalog.h  CatalogEntry 2.cpp  CatalogEntry.cpp  CatalogEntry.h  CatalogParams.cpp  CatalogParams.h  Catalogs.dsp  Catalogs.vcproj  Jamfile  Makefile
Code/ChemicalFeatures/: CMakeLists.txt  ChemicalFeature.h  FreeChemicalFeature 2.h  FreeChemicalFeature.cpp  FreeChemicalFeature.h  Jamfile  Makefile  libChemicalFeatures.vcproj  testChemicalFeatures.cpp  testChemicalFeatures.vcproj  test_list 2.py  test_list.py
Code/DataManip/: CMakeLists 2.txt
Code/DataStructs/: BitOps.cpp  BitOps.h  BitVect.cpp  BitVect.h  BitVectUtils.h  BitVects.h  BitVectsTest.vcproj  CMakeLists.txt  DatastructsException.h  DatastructsStreamOps.h  DiscreteDistMat 2.cpp  DiscreteDistMat.cpp  DiscreteDistMat.h  DiscreteValueVect 2.h  DiscreteValueVect.cpp  DiscreteValueVect.h  ExplicitBitVect 2.h  ExplicitBitVect.cpp  ExplicitBitVect.h  FPBReader.cpp  FPBReader.h  Jamfile  Makefile  MultiFPBReader.cpp  MultiFPBReader.h  RealValueVect.cpp  RealValueVect.h  SparseBitVect 2.h  SparseBitVect.cpp  SparseBitVect.h  SparseIntVect.h  Utils.cpp  base64 2.cpp  base64 2.h  base64.cpp  base64.h  benchBitOps.cpp  catch_tests.cpp  libDataStructs.dsp  libDatastructs.vcproj  (+4 more)
Code/DistGeom/: BoundsMatrix.h  CMakeLists 2.txt  CMakeLists.txt  ChiralSet.h  ChiralViolationContrib.cpp  ChiralViolationContrib.h  ChiralViolationContribs.cpp  ChiralViolationContribs.h  DistGeom.vcproj  DistGeomUtils.cpp  DistGeomUtils.h  DistViolationContrib.cpp  DistViolationContrib.h  DistViolationContribs.cpp  DistViolationContribs.h  EmbedObject.h  FourthDimContrib.h  FourthDimContribs.h  Jamfile  Makefile  TriangleSmooth 2.cpp  TriangleSmooth.cpp  TriangleSmooth.h  testDistGeom.cpp  testDistGeom.vcproj  test_list.py
Code/Features/: CMakeLists.txt  Feature.cpp  Feature.h  libFeatures.vcproj  testFeatures.cpp  testFeatures.vcproj  test_list.py
Code/ForceField/: AngleConstraint.cpp  AngleConstraint.h  AngleConstraints.cpp  AngleConstraints.h  CMakeLists 2.txt  CMakeLists.txt  Contrib.h  DistanceConstraint.cpp  DistanceConstraint.h  DistanceConstraints.cpp  DistanceConstraints.h  FiniteDifference.cpp  FiniteDifference.h  ForceField.cpp  ForceField.h  Jamfile  Makefile  Params.h  PositionConstraint.cpp  PositionConstraint.h  TorsionConstraint.cpp  TorsionConstraint.h  catch_tests.cpp  libForceField.vcproj  testForceField.cpp  testForceField.vcproj  test_list.py
Code/Fuzz/: CMakeLists.txt  README.md  mol_block_to_mol_fuzzer.cc  mol_data_stream_to_mol_fuzzer.cc  mol_data_stream_to_mol_fuzzer.dict  mol_deserialization_fuzzer.cc  smile_fuzz.cc  smiles_string_to_mol_fuzzer.cc  smiles_string_to_mol_fuzzer.dict  standalone_fuzz_target_runner.cpp
Code/Geometry/: CMakeLists.txt  Grid3D 2.h  Grid3D.h  GridUtils.cpp  GridUtils.h  Jamfile  Makefile  RDGeometry.vcproj  Trajectory.cpp  Trajectory.h  Transform 2.h  Transform.h  Transform2D.cpp  Transform2D.h  Transform3D.cpp  Transform3D.h  UniformGrid3D.cpp  UniformGrid3D.h  UniformRealValueGrid3D.cpp  UniformRealValueGrid3D.h  Utils.h  catch_tests.cpp  point.cpp  point.h  testGrid.cpp  testGrid.vcproj  testRealValueGrid.cpp  testTrajectory.cpp  testTransforms.cpp  testTransforms.vcproj  test_list.py
Code/GraphMol/: AddHs.cpp  AdjustQuery.cpp  Aromaticity.cpp  Atom.cpp  Atom.h  AtomIterators.cpp  AtomIterators.h  AtomProps.h  Atropisomers.cpp  Atropisomers.h  Bond.cpp  Bond.h  BondIterators.cpp  BondIterators.h  BondProps.h  CMakeLists.txt  Canon.cpp  Canon.h  Chirality.cpp  Chirality.h  Conformer 2.cpp  Conformer.cpp  Conformer.h  ConjugHybrid.cpp  DummyAtom.cpp  DummyAtom.h  EnumerateStereoisomers.cpp  EnumerateStereoisomers.h  FindRings.cpp  FindStereo.cpp  GraphMol 2.cpp  GraphMol.cpp  GraphMol.dsp  GraphMol.h  GraphMol.vcproj  GraphMolEnums.h  GraphMolFwd.h  GraphMolTest.dsp  Jamfile  Kekulize.cpp  (+140 more)
Code/JavaWrappers/: Abbreviations.i  AddHs.i  Atom.i  AtomIterators.i  AtomPairs.i  Atom_doc.i  AvalonLib 2.i  BitOps.i  Bond.i  BondIterators 2.i  BondIterators.i  BondIterators_doc.i  Bond_doc.i  CMakeLists 2.txt  CMakeLists.txt  Canon.i  ChemDraw.i  ChemReactions.i  ChemReactions_doc.i  ChemTransforms.i  Conformer.i  (+106 more)
rdkit/: CMakeLists.txt  RDBuild.py  RDConfig.py  RDLogger 2.py  RDLogger.py  RDPaths.py  RDRandom.py  TestRunner.py  UnitTestLogging.py  __init__.py  _py2_pickle.py  conftest.py  epydoc.config  fragmentshetero_atom_mutations_fuzzing.csv  fragmentsnot_changed_during_fuzzing.csv  hetero_atom_mutations.csv  pytest.ini  rdBase.pyd  six.py  test_list 2.py  test_list.py
rdkit-stubs/: CMakeLists.txt
(+8259 files in other folders)
